test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/stray-slash.widl
// This is a comment.
/ This is not.
